deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catfact
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: catfact
      role: catfact
  template:
    metadata:
      labels:
        app: catfact
        role: catfact
    spec:
      containers:
      - name: catfact
        image: catfact:latest
        imagePullPolicy: Never
        ports:
            - name: http
              containerPort: 8080
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 500m
