service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catfact
spec:
  type: NodePort
  selector:
    app: catfact
    role: catfact
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30000
